# classic-rock-hits-cli

./: .env.example  .gitignore  README.md  pyproject.toml
classic_rock_hits_cli/: main.py
tests/: test_main.py
